--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "@ngrx/store": "^21.0.1",
+    "angular-auth-oidc-client": "^21.0.1",
     "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "@ngrx/store": "^21.0.1"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^21.1.1",
