--- a/angular.json
+++ b/angular.json
@@ -37,21 +37,27 @@
 						]
 					},
 					"configurations": {
-						"production": {
-							"budgets": [
-								{
-									"type": "initial",
-									"maximumWarning": "2MB",
-									"maximumError": "3MB"
-								},
-								{
-									"type": "anyComponentStyle",
-									"maximumWarning": "2MB",
-									"maximumError": "3MB"
-								}
-							],
-							"outputHashing": "all"
-						},
+					"production": {
+						"budgets": [
+							{
+								"type": "initial",
+								"maximumWarning": "2MB",
+								"maximumError": "3MB"
+							},
+							{
+								"type": "anyComponentStyle",
+								"maximumWarning": "2MB",
+								"maximumError": "3MB"
+							}
+						],
+						"outputHashing": "all",
+						"fileReplacements": [
+							{
+								"replace": "src/environments/environment.ts",
+								"with": "src/environments/environment.prod.ts"
+							}
+						]
+					},
 						"development": {
 							"optimization": false,
 							"extractLicenses": false,
