--- a/angular.json
+++ b/angular.json
@@ -37,27 +37,28 @@
 						]
 					},
 					"configurations": {
-					"production": {
-						"budgets": [
-							{
-								"type": "initial",
-								"maximumWarning": "2MB",
-								"maximumError": "3MB"
-							},
-							{
-								"type": "anyComponentStyle",
-								"maximumWarning": "2MB",
-								"maximumError": "3MB"
-							}
-						],
-						"outputHashing": "all",
-						"fileReplacements": [
-							{
-								"replace": "src/environments/environment.ts",
-								"with": "src/environments/environment.prod.ts"
-							}
-						]
-					},
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "2MB",
+									"maximumError": "3MB"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "2MB",
+									"maximumError": "3MB"
+								}
+							],
+							"outputHashing": "all",
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.prod.ts"
+								}
+							],
+							"serviceWorker": "ngsw-config.json"
+						},
 						"development": {
 							"optimization": false,
 							"extractLicenses": false,
