--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^21.1.5",
     "@angular/platform-browser": "^21.1.5",
     "@angular/router": "^21.1.5",
+    "@angular/service-worker": "^21.1.5",
     "@ngrx/store": "^21.0.1",
     "angular-auth-oidc-client": "^21.0.1",
     "bootstrap-icons": "^1.13.1",
